# tubes

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
api/: Cargo.toml  compile_and_upload.sh  out.txt
api/migrations/: 20230818223326_setup.sql
api/src/: api.rs  data.rs  database.rs  main.rs  proxy.rs  templates.rs
api/static/: index.html  view_complaints.html
api/templates/: complaints.html.tera
public/: Water_Hydrant_Central.geojson  chrous_data_mock.json  suburb.json  temp.geojson
src/: App.jsx  index.css  main.jsx
src/assets/: chorus_data_mock_no_poly.json  suburbs.json  vector_data_mock.json
src/components/: CheckBox.jsx  Collapsable.jsx  ControlBox.jsx  IssueCard.jsx  IssueList.jsx  MapToolTip.jsx  Modal.jsx  Modal.tsx  NavItem.jsx  Navbar.jsx  ReportCard.jsx  Search.jsx
src/context/: AppContextProvider.jsx
src/data_parsers/: AirQuality.jsx  SuburbsLocalities.jsx
src/hooks/: useGet.js
src/layers/: AverageDailyTrafficLayer.jsx  CoastalHazardLayer.jsx  FireHydrantLayer.jsx  InternetLayer.jsx  InternetSource.jsx  SuburbAirQualityLayer.jsx  WaterLayer.jsx  WaterOutageMarkers.jsx  WaterPipeLayer.jsx
src/pages/: AllReportsPage.jsx  IssueDetailPage.jsx  IssuePage.jsx  MainLayout.jsx  MapPage.jsx  ReportPage.jsx  UploadPage.jsx
src/utils/: utils.js
