[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3", features = ["embed"] }
poem-openapi = { version = "1.3", features = ["swagger-ui", "static-files"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "*"
serde = { version = "*", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
rust-embed = "*"
thiserror = "1.0.47"
tracing = "0.1.37"
dotenv = "0.15.0"
serde_with = "3.2.0"
