[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3", features = ["embed", "rustls"] }
poem-openapi = { version = "1.3", features = ["swagger-ui", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "*"
serde = { version = "*", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
rust-embed = "*"
thiserror = "1.0.47"
tracing = "0.1.37"
dotenv = "0.15.0"
serde_with = "3.2.0"
tera = "1.19.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["json", "gzip"] }
chrono = { version = "0.4.26", features = ["serde"] }
geo-types = { version = "0.7.11", features = ["serde"] }
